# scran_qc

./: CMakeLists.txt  README.md
.github/workflows/: check-install.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  _formulas.tex  _formulas_dark.tex  adt__quality__control_8hpp.html  adt__quality__control_8hpp__dep__incl.map  adt__quality__control_8hpp__dep__incl.md5  adt__quality__control_8hpp__incl.map  adt__quality__control_8hpp__incl.md5  adt__quality__control_8hpp_source.html  annotated.html  choose__filter__thresholds_8hpp.html  choose__filter__thresholds_8hpp__dep__incl.map  choose__filter__thresholds_8hpp__dep__incl.md5  choose__filter__thresholds_8hpp__incl.map  choose__filter__thresholds_8hpp__incl.md5  choose__filter__thresholds_8hpp_source.html  classes.html  classscran_1_1adt__quality__control_1_1BlockedFilters-members.html  classscran_1_1adt__quality__control_1_1BlockedFilters.html  classscran_1_1adt__quality__control_1_1Filters-members.html  classscran_1_1adt__quality__control_1_1Filters.html  classscran_1_1choose__filter__thresholds_1_1BlockThresholds-members.html  classscran_1_1choose__filter__thresholds_1_1BlockThresholds.html  classscran_1_1choose__filter__thresholds_1_1Thresholds-members.html  classscran_1_1choose__filter__thresholds_1_1Thresholds.html  classscran_1_1crispr__quality__control_1_1BlockedFilters-members.html  classscran_1_1crispr__quality__control_1_1BlockedFilters.html  classscran_1_1crispr__quality__control_1_1Filters-members.html  classscran_1_1crispr__quality__control_1_1Filters.html  classscran_1_1find__median__mad_1_1Workspace-members.html  classscran_1_1find__median__mad_1_1Workspace.html  classscran_1_1rna__quality__control_1_1BlockedFilters-members.html  classscran_1_1rna__quality__control_1_1BlockedFilters.html  classscran_1_1rna__quality__control_1_1Filters-members.html  classscran_1_1rna__quality__control_1_1Filters.html  classscran__qc_1_1AdtQcBlockedFilters-members.html  classscran__qc_1_1AdtQcBlockedFilters.html  classscran__qc_1_1AdtQcFilters-members.html  classscran__qc_1_1AdtQcFilters.html  classscran__qc_1_1CrisprQcBlockedFilters-members.html  (+144 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_5.js  all_6.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  files_0.js  files_2.js  files_5.js  files_a.js  files_b.js  files_c.js  functions_1.js  functions_10.js  functions_2.js  functions_5.js  functions_6.js  functions_b.js  functions_d.js  (+16 more)
include/scran/: adt_quality_control.hpp  choose_filter_thresholds.hpp  crispr_quality_control.hpp  find_median_mad.hpp  format_filters.hpp  per_cell_qc_metrics.hpp  rna_quality_control.hpp
include/scran_qc/: adt_quality_control.hpp  choose_filter_thresholds.hpp  crispr_quality_control.hpp  find_median_mad.hpp  format_filters.hpp  per_cell_qc_metrics.hpp  rna_quality_control.hpp  scran_qc.hpp  utils.hpp
tests/: CMakeLists.txt
tests/src/: adt_quality_control.cpp  choose_filter_thresholds.cpp  crispr_quality_control.cpp  find_median_mad.cpp  format_filters.cpp  per_cell_qc_metrics.cpp  rna_quality_control.cpp
